--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
   - env: go_version=1.12.7
 
 install:
-  - docker build --build-arg go_version="$go_version" -t hanamichi/jenkins-slaves-golang:"$go_version"
+  - cd golang && docker build --build-arg go_version="$go_version" -t hanamichi/jenkins-slaves-golang:"$go_version ."
 
 script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
