--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,9 @@ jobs:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push hanamichi/jenkins-slaves-docker:1.13
       if: commit_message =~ ^.*\[build-docker\].*$
+    - stage: build-aio
+      script:
+        - cd alltool && docker build . -t 99cloud/jenkins-slaver-aio:v1.0
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker push 99cloud/jenkins-slaver-aio:v1.0
+      if: commit_message =~ ^.*\[build-aio\].*$
