--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ jobs:
       if: commit_message =~ ^.*\[build-ansible2.7.11\].*$
     - stage: build-docker
       script:
-        - cd docker && docker build . -t hanamichi/jenkins-slaves-docker:1.13
+        - cd docker && docker build . -t hanamichi/jenkins-slaves-docker:latest
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push hanamichi/jenkins-slaves-docker:1.13
+        - docker push hanamichi/jenkins-slaves-docker:latest
       if: commit_message =~ ^.*\[build-docker\].*$
     - stage: build-aio
       script:
