--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,5 @@ jobs:
       script:
         - cd alltool && docker build . -t 99cloud/jenkins-slaver-aio:v1.0
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push 99cloud/jenkins-slaver-aio:v1.0
+        - docker push 99cloud/jenkins-slaver-aio:latest
       if: commit_message =~ ^.*\[build-aio\].*$
